--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "1.0.0"
 
 description = "A powerful, multi-interface Python package for deep characterization of single-cell feature expression patterns."
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Qingzhou Zhang"}
 ]
@@ -17,7 +17,6 @@ classifiers = [
     
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
