eat: Add cluster evaluation and dynamic marker selection
- Introduces `evaluate_clustering` to assess cluster quality with silhouette scores before marker analysis.
- Adds `select_robust_markers` function to automatically find top markers using a data-driven k-means approach, removing the need for manual thresholds.
- Renames CLI entry point to `scfeatureprofiler` for consistency.
- Updates documentation and fixes pandas `FutureWarning`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ all = [
 
 # Scripts section updated to the new, single Typer app entry point
 [project.scripts]
-scprofiler = "scfeatureprofiler.cli:app"
+scfeatureprofiler = "scfeatureprofiler.cli:app"
 
 
 [tool.setuptools.packages.find]
